2022-03-21  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* poked/poked.c (poked_init): Remove dead code.

2022-03-21  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* poked/poked.pk (Poked_Hook): New type.
	(poked_after_eval_hook): New variable for saving hooks.
	(__poked_run_after_eval_hooks): New function.
	* poked/poked.c (main): Call `__poked_run_after_eval_hooks` after
	compiling statement.

2022-03-21  Jose E. Marchesi  <jemarch@gnu.org>

	* poke-el/poke-el.texi: New file.
	* poke-el/COPYING: Likewise.
	* poke-el/README: Likewise.

2022-03-21  Jose E. Marchesi  <jemarch@gnu.org>

	* emacs/poke.el (poke-ios-populate): Reverse list of IOS before
	printing.

2022-03-21  Jose E. Marchesi  <jemarch@gnu.org>

	* emacs/poke.el (poke-repl-input-sender): Avoid race condition in
	repl handling.

2022-03-18  Jose E. Marchesi  <jemarch@gnu.org>

	* emacs/poke.el (poke-edit-1): Use tree-mode when formatting
	element values.
	(poke-exit): Handle *poke-edit*.

2022-03-17  Jose E. Marchesi  <jemarch@gnu.org>

	* emacs/poke.el (poke-maps): Define.
	(poke-exit): Handle *poke-maps*.
	(poke-repl-mode-map): Adds keybind for poke-maps.
	(poke-maps-mode): Define.
	(poke-maps-mode-map): Likewise.

2022-03-17  Jose E. Marchesi  <jemarch@gnu.org>

	* emacs/poke.el (poke-setting-pretty-print): New variable.
	(poke-setting-omode): Likewise.
	(poke-settings-create-widgets): New function.
	(poke-settings): Likewise.
	(poke-exit): Kill buffer *poke-settings*.

2022-03-16  Jose E. Marchesi  <jemarch@gnu.org>

	* emacs/poke.el (poke-vu-cmd-prev-line): Renamed to feature cmd in
	the name.
	(poke-vu-cmd-page-down): Likewise.
	(poke-vu-cmd-page-up): Likewise.
	(poke-vu-cmd-goto-byte): Likewise.
	(poke-vu-mode): Adjust accordingly.
	(poke-vu-goto-byte): New function.
	(poke-vu-cmd-goto-byte): Use poke-vu-goto-byte.

2022-03-16  Jose E. Marchesi  <jemarch@gnu.org>

	* emacs/poke.el (poke-vu-refresh): Ask for the right number of
	lines, taking the header and modeline into account.