@@ -1,3 +1,8 @@
+2022-03-22  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>
+
+	* poked/poked.c (main): Call `__poked_run_after_eval_hooks` even
+	if the statment is not expression.
+
 2022-03-21  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>
 
 	* poked/poked.c (poked_init): Remove dead code.
